# willeq

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  eqtitanium.json.sample  test_detail_system.sh  titanium_packets_classic_kunark_velious.md  willeq_missing_opcodes.md
.agent/: detail_system_implementation_plan.md  dynamic_tree_movement_plan.md  ecommons_model_failures.md  environmental_particles_plan.md  full_audio_implementation_plan.md  hotbar_implementation_plan.md  mode_separation_refactor_plan.md  pcap_replay_test_plan.md  performance_optimization_priorities.md  phase7_eq_integration_plan.md  pre_luclin_opcodes_implementation_plan.md  rdp_implementation_plan.md  rendering_performance_plan.md  s3d_rendering_bugs_analysis.md  s3d_wld_caching_analysis.md  s3d_wld_fix_plan.md  software_renderer_performance_analysis.md  sound_implementation_plan.md  spawn544_investigation.md  state_management_updates.md  string_database_plan.md  surface_map_expansion_plan.md  weather_effects_plan.md  zone_clientupdate_bug_investigation.md
cmake/toolchains/: arm-linux-gnueabihf.cmake  macos-x86_64.cmake
config/: chat_settings.json  display_settings.json  environment_effects.json  hotkeys.json  music_events.json  race_models.json  ui_settings.json  weather_effects.json
configs/: detail_objects.json
data/: item_models.json  pre_luclin_zones.json  zone_lines.json  zone_lines_unresolved.json  zone_points.json
data/config/: tree_wind.json
data/detail/: default_config.json
data/zone_lines/: airplane.json  akanon.json  arena.json  befallen.json  beholder.json  blackburrow.json  burningwood.json  butcher.json  cabeast.json  cabwest.json  cauldron.json  cazicthule.json  charasis.json  chardok.json  citymist.json  cobaltscar.json  commons.json  crushbone.json  crystal.json  dalnir.json  dreadlands.json  droga.json  eastkarana.json  eastwastes.json  ecommons.json  emeraldjungle.json  erudnext.json  erudnint.json  erudsxing.json  everfrost.json  fearplane.json  feerrott.json  felwithea.json  felwitheb.json  fieldofbone.json  firiona.json  freporte.json  freportn.json  freportw.json  frontiermtns.json  (+77 more)
docker/: Dockerfile  Dockerfile.arm-cross  Dockerfile.arm-noble  README.md  docker-compose.yml  entrypoint.sh  gl4es-mali400-patch.py  irrlicht-drm-patch.py
docker/irrlicht-drm/: CIrrDeviceFB.cpp  CIrrDeviceFB.h
docker/macos-cross/: Dockerfile  README.md  build-macos.sh
docs/: audio_implementation_guide.md  eff_sound_format.md  eq_audio_assets_catalog.md  procedural_environment_enhancements.md  pvs_implementation_guide.md  rdp_implementation_guide.md  voodoo1_mode_prompt.md
docs/zone_textures/: all_textures_combined.txt  classic_antonica.txt  classic_dungeons.txt  classic_faydwer.txt  classic_odus.txt  classic_planes.txt  kunark.txt  texture_categories.md  velious.txt
include/client/: animation_constants.h  application.h  combat.h  eq.h  eq_action_handler.h  formatted_message.h  hc_map.h  pathfinder_interface.h  pathfinder_nav_mesh.h  pathfinder_null.h  pathfinder_waypoint.h  pet_constants.h  position.h  raycast_mesh.h  string_database.h  trade_manager.h  ucs.h  world_object.h  zone_lines.h
include/client/action/: action_dispatcher.h  command_processor.h  input_action_bridge.h
include/client/audio/: audio_manager.h  combat_music.h  creature_sounds.h  door_sounds.h  eff_loader.h  music_player.h  player_sounds.h  sound_assets.h  sound_buffer.h  ui_sounds.h  water_sounds.h  weather_audio.h  xmi_decoder.h  zone_audio_manager.h  zone_sound_emitter.h
include/common/: logging.h  name_utils.h  packet_structs.h  performance_metrics.h  simd_detect.h
scripts/: build-arm-noble.sh  build-arm.sh  capture_and_compare.sh  gdb_music_crash.sh  generate_rain_texture.py  generate_s3d_reference.sh  generate_s3d_reference_json.py  generate_s3d_reference_json.sh  generate_snow_textures.py  generate_storm_cloud_textures.py  generate_textures.py  run-model-viewer.sh  run-test.sh  start-with-vnc-audio.sh  start-with-vnc.sh  test-audio-hang.sh  test-midi-streaming.sh  test-xmi-wildmidi.sh  test_fkey_input.sh  test_loopback_minimal.cpp  test_music_compare.sh  test_rdp_connection.sh  test_rdp_multi_connect.sh  test_zoning_hang.sh  update_race_models_from_reference.py
src/client/: application.cpp  combat.cpp  eq.cpp  eq_action_handler.cpp  formatted_message.cpp  hc_map.cpp  main.cpp  pathfinder_interface.cpp  pathfinder_nav_mesh.cpp  pathfinder_null.cpp  pathfinder_waypoint.cpp  position.cpp  raycast_mesh.cpp  string_database.cpp  trade_manager.cpp  ucs.cpp  world_object.cpp  zone_lines.cpp
src/common/: performance_metrics.cpp
tests/: CMakeLists.txt  daybreak_test_harness.h  pcap_test_utils.h  test_asset_loading.cpp  test_beneficial_spell_casting.cpp  test_combat.cpp  test_combat_music.cpp  test_compression.cpp  test_constrained_renderer.cpp  test_crc32.cpp  test_creature_sounds.cpp  test_data_verification.cpp  test_day_night_audio.cpp  test_daybreak_connection_pcap.cpp  test_daybreak_harness.cpp  test_door_loading.cpp  test_door_sounds.cpp  test_eff_loader.cpp  test_eq_client.cpp  test_fluidsynth_midi.cpp  test_formatted_message.cpp  test_frustum_culler.cpp  test_graphics.cpp  test_hotkey_manager.cpp  test_integration_network.cpp  test_inventory_model_view.cpp  test_logging.cpp  test_music_loopback_compare.cpp  test_packet.cpp  test_packet_structs.cpp  test_pathfinder.cpp  test_pcap_extractor.cpp  test_pcap_replay.cpp  test_pcap_step_through.cpp  test_pfs_archive.cpp  test_player_sounds.cpp  test_position.cpp  test_random.cpp  test_raycast.cpp  test_rdp_input_handler.cpp  (+18 more)
tools/: analyze_bsp.cpp  analyze_hum_model.cpp  bsp_coordinate_finder.cpp  bsp_region_finder.cpp  dump_icon_sheet.cpp  eff_dump.cpp  extract_zone_lines.cpp  extract_zone_textures.sh  generate_all_surface_maps.sh  generate_surface_map.cpp  generate_textures.cpp  generate_zone_lines.py  model_viewer.cpp  model_viewer_spell_bar.h  pfs_list.cpp  pfs_verify.cpp  query_surface_map.cpp  s3d_dump.cpp  s3d_extract.cpp  scan_creature_sounds.cpp  test_animation.cpp  wld_dump.cpp  xmi_extract_tracks.cpp  zone_line_editor.cpp
(+334 files in other folders)
